gccida/g2/decode_rtx_const
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/varasm.c:4006:25: error: must use 'enum' tag to refer to type 'machine_mode'
void  decode_rtx_const( machine_mode mode, rtx x,  struct rtx_const *value) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/varasm.c:4017:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v12; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/varasm.c:4043:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
value->un.du.d.r[2] = ( __int64)x[2]; 
                                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/varasm.c:4047:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
value->un.du.d.r[1] = ( __int64)x[1]; 
                                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/varasm.c:4058:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[v3]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/varasm.c:4083:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/varasm.c:4097:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/varasm.c:4110:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/decode_rtx_const/src/obj/varasm.o] Error 1
